WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28375
execCommand("InsertHorizontalRule") inserts a broken <hr> element
https://bugs.webkit.org/show_bug.cgi?id=28375
Summary
execCommand("InsertHorizontalRule") inserts a broken <hr> element
Darin Adler
Reported
2009-08-16 21:54:57 PDT
The code in executeInsertHorizontalRule creates an <hr> element of the wrong internal class. This makes it serialize incorrectly and has a number of other minor bad effects.
Attachments
patch
(6.21 KB, patch)
2009-08-16 21:59 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-08-16 21:59:01 PDT
Created
attachment 34946
[details]
patch
Darin Adler
Comment 2
2009-08-16 22:25:44 PDT
http://trac.webkit.org/changeset/47349
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug