WebCore: execCommand("InsertHorizontalRule") inserts a broken <hr> element https://bugs.webkit.org/show_bug.cgi?id=28375

Patch by Darin Adler <darin@apple.com> on 2009-08-16
Reviewed by Dan Bernstein.

* editing/EditorCommand.cpp:
(WebCore::executeInsertHorizontalRule): Create an HTMLHRElement
instead of just an HTMLElement.

LayoutTests: execCommand("InsertHorizontalRule") inserts a broken <hr> element
https://bugs.webkit.org/show_bug.cgi?id=28375

Patch by Darin Adler <darin@apple.com> on 2009-08-16
Reviewed by Dan Bernstein.

* editing/execCommand/arguments-combinations-expected.txt: Updated.
* editing/execCommand/arguments-combinations.html: Updated to expect
the <hr> element to be self-closing rather than having a separate
</hr> in the markup.



git-svn-id: svn://svn.chromium.org/blink/trunk@47348 bbb929c8-8fbe-4397-9dbb-9b2b20218538